--- a/fe/src/uss/css/SignUp.css
+++ b/fe/src/uss/css/SignUp.css
@@ -1,43 +1,52 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Dotum, '돋움', Helvetica, sans-serif;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #f5f6f7;
+  display: block;
 }
 
 * {
   box-sizing: border-box
 }
 
+h1 {
+  text-align: center;
+}
+
 /* Full-width input fields */
-input[type=text],
-input[type=password] {
+input,
+select {
   width: 100%;
+  height: 50px;
   padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: #f1f1f1;
+  margin: 5px 0 25px 0;
+  display: block;
+  background-color: #fff;
+  border: 1px solid #dadada;
 }
 
-input[type=text]:focus,
-input[type=password]:focus {
-  background-color: #ddd;
+input:focus,
+select:focus {
+  background-color: #fff;
+  border: 1px solid #28c759;
   outline: none;
-}
-
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
 }
 
 /* Set a style for all buttons */
 button {
-  background-color: #4CAF50;
+  border: 1px solid #24b753;
+  background-color: #10c247;
   color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
+  padding: 15px;
+  margin: 5px 0 25px 0;
+  display: block;
   cursor: pointer;
   width: 100%;
+  height: 50px;
   opacity: 0.9;
+  font-size: large;
 }
 
 button:hover {
@@ -46,25 +55,26 @@ button:hover {
 
 /* Extra styles for the cancel button */
 .cancelbtn {
-  padding: 14px 20px;
-  background-color: #f44336;
-}
-
-/* Float cancel and signup buttons and add an equal width */
-.cancelbtn,
-.signupbtn,
-.editbtn {
-  float: left;
-  width: 50%;
+  padding: 15px;
+  background-color: #f33326;
+  border: 1px solid #c73924;
 }
 
 /* Add padding to container elements */
+.join_form {
+  width: 100%;
+  margin: 0 auto;
+}
+
 .container {
-  padding: 16px;
+  padding: 15px;
+  max-width: 460px;
+  min-width: 250px;
+  margin: 0 auto;
 }
 
 /* Clear floats */
-.clearfix::after {
+.btn_area::after {
   content: "";
   clear: both;
   display: table;
